# agent_labyrinth

./: .gitignore  AGENTS.md  CHALLENGE_TASK.md  README.md  cli.py  labyrinth.db  labyrinth.yaml  labyrinth_audit.jsonl  pyproject.toml
labyrinth/: cli.py
labyrinth/core/: audit.py  config.py  db.py  image_quiz.py  models.py  quiz.py  registry.py  scoring.py  word_change.py
labyrinth/plugins/breadcrumb_labyrinth/: README.md  config.yaml  engine.py  loader.py  models.py  plugin.py  render.py  usable_types.json  world.json
labyrinth/plugins/cypher/: config.yaml  plugin.py
labyrinth/plugins/image_quiz_001/: answer_guids.txt  config.yaml  plugin.py
labyrinth/plugins/image_quiz_002/: config.yaml  plugin.py
labyrinth/plugins/palindrome/: config.yaml  plugin.py
labyrinth/plugins/philosophers_treasure/: config.yaml  plugin.py
labyrinth/plugins/quiz_001/: config.yaml  plugin.py
labyrinth/plugins/quiz_002/: config.yaml  plugin.py
labyrinth/plugins/quiz_003/: config.yaml  plugin.py
labyrinth/plugins/quiz_004/: config.yaml  plugin.py
labyrinth/plugins/quiz_005/: config.yaml  plugin.py
labyrinth/plugins/quiz_006/: config.yaml  plugin.py
labyrinth/plugins/quiz_007/: config.yaml  plugin.py
labyrinth/plugins/quiz_008/: config.yaml  plugin.py
labyrinth/plugins/quiz_009/: config.yaml  plugin.py
labyrinth/plugins/quiz_010/: config.yaml  plugin.py
labyrinth/plugins/quiz_011/: config.yaml  plugin.py
labyrinth/plugins/quiz_012/: config.yaml  plugin.py
labyrinth/plugins/quiz_013/: config.yaml  plugin.py
tests/: test_breadcrumb_labyrinth.py
(+156 files in other folders)
